<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTipoElemento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/tipo"
        android:text="@string/tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spTipo"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipoElemento"
        app:layout_constraintStart_toEndOf="@+id/tvTipoElemento"
        app:layout_constraintTop_toTopOf="@+id/tvTipoElemento" />

    <TextView
        android:id="@+id/tvDetalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/detalhe"
        android:text="@string/detalhe"
        app:layout_constraintStart_toStartOf="@+id/tvTipoElemento"
        app:layout_constraintTop_toBottomOf="@+id/spTipo" />

    <Spinner
        android:id="@+id/spDetalhe"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetalhe"
        app:layout_constraintStart_toEndOf="@+id/tvDetalhe"
        app:layout_constraintTop_toTopOf="@+id/tvDetalhe" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/valor"
        android:text="Valor:"
        app:layout_constraintStart_toStartOf="@+id/tvDetalhe"
        app:layout_constraintTop_toBottomOf="@+id/spDetalhe"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/insira_o_valor"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/tvValor"
        app:layout_constraintStart_toEndOf="@+id/tvValor"
        app:layout_constraintTop_toTopOf="@+id/tvValor" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/data"
        android:text="@string/data"
        app:layout_constraintStart_toStartOf="@+id/tvValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btLançar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lan_ar"
        app:layout_constraintStart_toStartOf="@+id/tvData"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <Button
        android:id="@+id/btLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ver_lan_amento"
        app:layout_constraintStart_toStartOf="@+id/btLançar"
        app:layout_constraintTop_toBottomOf="@+id/btLançar" />

    <Button
        android:id="@+id/btSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/saldo"
        app:layout_constraintStart_toStartOf="@+id/btLancamento"
        app:layout_constraintTop_toBottomOf="@+id/btLancamento" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/selecione_a_data"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <ImageButton
        android:id="@+id/btData"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="@+id/tvDate"
        app:srcCompat="@drawable/calendar_month_24dp_5f6368_fill0_wght400_grad0_opsz24"/>

</androidx.constraintlayout.widget.ConstraintLayout>